# todo-react

./: .editorconfig  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  package-lock.json  package.json
.cursor/rules/: music-sync-hub.mdc
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  auth_jwt.py  deps.py  liked_songs.py  playlists.py  profiles.py  sync.py
backend/app/core/: celery_app.py  redis_client.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  playlist.py  playlist_track.py  sync_history.py  track.py  user.py  user_platform_account.py  user_preference.py
backend/app/repositories/: base.py  user.py
backend/app/schemas/: user.py
backend/app/services/: spotify_client.py  sync_manager.py  youtube_client.py
backend/app/templates/: _proposed_sync_actions.html  index.html  liked_songs.html
backend/app/templates/profiles/: spotify.html
backend/app/utils/: dependencies.py  session_manager.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: bf37987115ae_initial.py
docs/: implementation-roadmap.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  RequireAuth.tsx
frontend/src/pages/: Dashboard.tsx  Liked.tsx  Login.tsx  Playlists.tsx  Register.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/store/slices/: authSlice.ts
music_sync_app/: .env.example  README.md  config.py  deezer_client.py  logging_config.py  main.py  requirements.txt  spotify_client.py  sync_manager.py  token_store.py  youtube_client.py
music_sync_app/routers/: __init__.py  auth.py  liked_songs.py  playlists.py  profiles.py  sync.py
music_sync_app/templates/: _playlist_sync_actions.html  _proposed_playlist_sync_actions.html  _proposed_sync_actions.html  _service_items_display.html  error.html  index.html  playlists.html  profile.html
music_sync_app/utils/: __init__.py  dependencies.py  helpers.py  session_manager.py
src/: App.js
src/components/: AddTodo.js  TodoItem.js  Todos.js
src/components/layout/: Header.js
src/components/pages/: About.js
